preViews title not filling the gap fixed

--- a/style.css
+++ b/style.css
@@ -187,17 +187,18 @@ a:link {
 }
 .preViewTitle{
    display: flex;
+   flex-wrap: wrap;
    justify-content: center;
    align-items: center;
-   text-align:center;
+   text-align: center;
+
    box-sizing: border-box;
+   padding: 6px 10px;
+   min-height: 2.5rem;
    width:215px;
    
-   
-   min-height: 2.5rem;
-   padding:5px 15px;
    font-weight: 500;
-   border-radius: 0 0 3em 3em;
+   border-radius: 0 0 2em 2em;
    background-color: white;
 }
 
